--- a/sky-take-out/sky-server/src/main/resources/application-dev.yml
+++ b/sky-take-out/sky-server/src/main/resources/application-dev.yml
@@ -6,3 +6,8 @@ sky:
     database: sky_take_out
     username: root
     password: 123456
+  redis:
+    host: 117.72.190.135
+    port: 16379
+    #password: 123456
+    database: 10
