task 7:来单提醒，客户催单 task 9：工作台。导出运营数据报表

--- a/sky-take-out/sky-server/src/main/resources/application-dev.yml
+++ b/sky-take-out/sky-server/src/main/resources/application-dev.yml
@@ -5,9 +5,19 @@ sky:
     port: 13306
     database: sky_take_out
     username: root
-    password: 123456
+    #password: 123456
   redis:
     host: 117.72.190.135
     port: 16379
-    #password: 123456
+    password: 123456
     database: 10
+  wechat:
+    appid: wxffb3637a228223b8
+    secret: 84311df9199ecacdf4f12d27b6b9522d
+    mchid: 1561414331
+    mchSerialNo: 4B3B3DC35414AD50B1B755BAF8DE9CC7CF407606
+    privateKeyFilePath: D:\pay\apiclient_key.pem
+    apiV3Key: CZBK51236435wxpay435434323FFDuv3
+    weChatPayCertFilePath: D:\pay\wechatpay_166D96F876F45C7D07CE98952A96EC980368ACFC.pem
+    notifyUrl: https://58869fb.r2.cpolar.top/notify/paySuccess
+    refundNotifyUrl: https://58869fb.r2.cpolar.top/notify/refundSuccess
