--- a/sky-take-out/sky-server/src/main/resources/application.yml
+++ b/sky-take-out/sky-server/src/main/resources/application.yml
@@ -28,17 +28,43 @@ mybatis:
 
 logging:
   level:
+    org.springframework.web: debug
+    org.mybatis: debug
     com:
       sky:
         mapper: debug
         service: info
         controller: info
 
+
 sky:
-  jwt:
-    # 设置jwt签名加密时使用的秘钥
-    admin-secret-key: itcast
-    # 设置jwt过期时间
-    admin-ttl: 7200000
-    # 设置前端传递过来的令牌名称
-    admin-token-name: token
+    jwt:
+      # 设置jwt签名加密时使用的秘钥
+      admin-secret-key: itcast
+      # 设置jwt过期时间
+      admin-ttl: 7200000
+      # 设置前端传递过来的令牌名称
+      admin-token-name: token
+      user-secret-key: itheima
+      user-ttl: 7200000
+      user-token-name: authentication
+
+    alioss:
+      endpoint: oss-cn-beijing.aliyuncs.com
+
+      bucket-name: chaojiyk
+
+    shop:
+      address: 天津北辰区双口镇西平道5340号
+    baidu:
+      ak: your-ak
+    wechat:
+      appid: ${sky.wechat.appid}
+      secret: ${sky.wechat.secret}
+      mchid: ${sky.wechat.mchid}
+      mchSerialNo: ${sky.wechat.mchSerialNo}
+      privateKeyFilePath: ${sky.wechat.privateKeyFilePath}
+      apiV3Key: ${sky.wechat.apiV3Key}
+      weChatPayCertFilePath: ${sky.wechat.weChatPayCertFilePath}
+      notifyUrl: ${sky.wechat.notifyUrl}
+      refundNotifyUrl: ${sky.wechat.refundNotifyUrl}
